--- a/lib/css/output.css
+++ b/lib/css/output.css
@@ -11,11 +11,9 @@
     --color-red-700: oklch(0.505 0.213 27.518);
     --color-yellow-300: oklch(0.905 0.182 98.111);
     --color-yellow-400: oklch(0.852 0.199 91.936);
-    --color-yellow-500: oklch(0.795 0.184 86.047);
     --color-green-100: oklch(0.962 0.044 156.743);
     --color-green-400: oklch(0.792 0.209 151.711);
     --color-green-700: oklch(0.527 0.154 150.069);
-    --color-green-800: oklch(0.448 0.119 151.328);
     --color-teal-400: oklch(0.777 0.152 181.912);
     --color-blue-100: oklch(0.932 0.032 255.585);
     --color-blue-300: oklch(0.809 0.105 251.813);
@@ -40,6 +38,7 @@
     --color-white: #fff;
     --spacing: 0.25rem;
     --breakpoint-xl: 80rem;
+    --breakpoint-2xl: 96rem;
     --container-md: 28rem;
     --container-2xl: 42rem;
     --container-7xl: 80rem;
@@ -59,12 +58,15 @@
     --text-3xl--line-height: calc(2.25 / 1.875);
     --text-4xl: 2.25rem;
     --text-4xl--line-height: calc(2.5 / 2.25);
+    --text-5xl: 3rem;
+    --text-5xl--line-height: 1;
     --text-6xl: 3.75rem;
     --text-6xl--line-height: 1;
     --font-weight-medium: 500;
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
     --font-weight-extrabold: 800;
+    --leading-tight: 1.25;
     --leading-snug: 1.375;
     --leading-normal: 1.5;
     --leading-relaxed: 1.625;
@@ -868,14 +870,17 @@
   .right-4 {
     right: calc(var(--spacing) * 4);
   }
-  .right-5 {
-    right: calc(var(--spacing) * 5);
-  }
   .right-8 {
     right: calc(var(--spacing) * 8);
   }
+  .-bottom-4 {
+    bottom: calc(var(--spacing) * -4);
+  }
   .-bottom-5 {
     bottom: calc(var(--spacing) * -5);
+  }
+  .-bottom-8 {
+    bottom: calc(var(--spacing) * -8);
   }
   .-bottom-10 {
     bottom: calc(var(--spacing) * -10);
@@ -883,11 +888,17 @@
   .-bottom-20 {
     bottom: calc(var(--spacing) * -20);
   }
-  .-bottom-30 {
-    bottom: calc(var(--spacing) * -30);
+  .-bottom-32 {
+    bottom: calc(var(--spacing) * -32);
+  }
+  .-bottom-36 {
+    bottom: calc(var(--spacing) * -36);
   }
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
+  }
+  .bottom-32 {
+    bottom: calc(var(--spacing) * 32);
   }
   .bottom-\[8\%\] {
     bottom: 8%;
@@ -928,20 +939,23 @@
   .order-3 {
     order: 3;
   }
+  .col-span-3 {
+    grid-column: span 3 / span 3;
+  }
   .col-span-4 {
     grid-column: span 4 / span 4;
+  }
+  .col-span-6 {
+    grid-column: span 6 / span 6;
   }
   .col-span-8 {
     grid-column: span 8 / span 8;
   }
-  .col-start-2 {
-    grid-column-start: 2;
+  .col-span-12 {
+    grid-column: span 12 / span 12;
   }
   .col-start-3 {
     grid-column-start: 3;
-  }
-  .col-start-4 {
-    grid-column-start: 4;
   }
   .container {
     width: 100%;
@@ -966,9 +980,6 @@
   }
   .my-4 {
     margin-block: calc(var(--spacing) * 4);
-  }
-  .my-5 {
-    margin-block: calc(var(--spacing) * 5);
   }
   .my-10 {
     margin-block: calc(var(--spacing) * 10);
@@ -1008,9 +1019,6 @@
   }
   .mt-16 {
     margin-top: calc(var(--spacing) * 16);
-  }
-  .mt-20 {
-    margin-top: calc(var(--spacing) * 20);
   }
   .apexcharts-canvas {
     & .apexcharts-tooltip {
@@ -1356,6 +1364,9 @@
   .mb-12 {
     margin-bottom: calc(var(--spacing) * 12);
   }
+  .mb-14 {
+    margin-bottom: calc(var(--spacing) * 14);
+  }
   .mb-20 {
     margin-bottom: calc(var(--spacing) * 20);
   }
@@ -1440,44 +1451,8 @@
   .table {
     display: table;
   }
-  .aspect-\[1\/2\] {
-    aspect-ratio: 1/2;
-  }
-  .aspect-\[1\/4\] {
-    aspect-ratio: 1/4;
-  }
-  .aspect-\[2\/1\] {
-    aspect-ratio: 2/1;
-  }
-  .aspect-\[2\/4\] {
-    aspect-ratio: 2/4;
-  }
-  .aspect-\[3\/1\] {
-    aspect-ratio: 3/1;
-  }
   .aspect-\[3\/2\] {
     aspect-ratio: 3/2;
-  }
-  .aspect-\[3\/4\] {
-    aspect-ratio: 3/4;
-  }
-  .aspect-\[4\/2\] {
-    aspect-ratio: 4/2;
-  }
-  .aspect-\[4\/3\] {
-    aspect-ratio: 4/3;
-  }
-  .aspect-\[5\/4\] {
-    aspect-ratio: 5/4;
-  }
-  .aspect-\[6\/4\] {
-    aspect-ratio: 6/4;
-  }
-  .aspect-\[6\/5\] {
-    aspect-ratio: 6/5;
-  }
-  .aspect-\[7\/5\] {
-    aspect-ratio: 7/5;
   }
   .aspect-\[7\/6\] {
     aspect-ratio: 7/6;
@@ -1512,20 +1487,11 @@
   .h-48 {
     height: calc(var(--spacing) * 48);
   }
-  .h-52 {
-    height: calc(var(--spacing) * 52);
-  }
-  .h-60 {
-    height: calc(var(--spacing) * 60);
-  }
-  .h-70 {
-    height: calc(var(--spacing) * 70);
+  .h-\[34px\] {
+    height: 34px;
   }
   .h-\[calc\(100\%-1rem\)\] {
     height: calc(100% - 1rem);
-  }
-  .h-auto {
-    height: auto;
   }
   .h-full {
     height: 100%;
@@ -1616,9 +1582,6 @@
       text-align: center;
     }
   }
-  .w-1 {
-    width: calc(var(--spacing) * 1);
-  }
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
@@ -1645,6 +1608,9 @@
   }
   .w-4 {
     width: calc(var(--spacing) * 4);
+  }
+  .w-4\/5 {
+    width: calc(4/5 * 100%);
   }
   .w-5 {
     width: calc(var(--spacing) * 5);
@@ -1679,23 +1645,20 @@
   .w-36 {
     width: calc(var(--spacing) * 36);
   }
-  .w-40 {
-    width: calc(var(--spacing) * 40);
-  }
   .w-48 {
     width: calc(var(--spacing) * 48);
-  }
-  .w-60 {
-    width: calc(var(--spacing) * 60);
   }
   .w-64 {
     width: calc(var(--spacing) * 64);
   }
+  .w-72 {
+    width: calc(var(--spacing) * 72);
+  }
   .w-80 {
     width: calc(var(--spacing) * 80);
   }
-  .w-100 {
-    width: calc(var(--spacing) * 100);
+  .w-\[34px\] {
+    width: 34px;
   }
   .w-\[40\%\] {
     width: 40%;
@@ -1706,20 +1669,20 @@
   .w-\[70\%\] {
     width: 70%;
   }
-  .w-\[200px\] {
-    width: 200px;
-  }
   .w-\[380px\] {
     width: 380px;
-  }
-  .w-\[400px\] {
-    width: 400px;
   }
   .w-auto {
     width: auto;
   }
   .w-full {
     width: 100%;
+  }
+  .max-w-1\/2 {
+    max-width: calc(1/2 * 100%);
+  }
+  .max-w-2\/3 {
+    max-width: calc(2/3 * 100%);
   }
   .max-w-2xl {
     max-width: var(--container-2xl);
@@ -1735,6 +1698,9 @@
   }
   .max-w-md {
     max-width: var(--container-md);
+  }
+  .max-w-screen-2xl {
+    max-width: var(--breakpoint-2xl);
   }
   .max-w-screen-xl {
     max-width: var(--breakpoint-xl);
@@ -1861,6 +1827,9 @@
   .resize {
     resize: both;
   }
+  .list-inside {
+    list-style-position: inside;
+  }
   .list-disc {
     list-style-type: disc;
   }
@@ -1912,12 +1881,6 @@
   .justify-start {
     justify-content: flex-start;
   }
-  .gap-0 {
-    gap: calc(var(--spacing) * 0);
-  }
-  .gap-1 {
-    gap: calc(var(--spacing) * 1);
-  }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
   }
@@ -1932,6 +1895,9 @@
   }
   .gap-10 {
     gap: calc(var(--spacing) * 10);
+  }
+  .gap-20 {
+    gap: calc(var(--spacing) * 20);
   }
   .space-y-3 {
     :where(& > :not(:last-child)) {
@@ -1997,6 +1963,11 @@
       border-top-style: var(--tw-border-style);
       border-top-width: calc(1px * var(--tw-divide-y-reverse));
       border-bottom-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
+    }
+  }
+  .divide-\[\#24a3f2d3\] {
+    :where(& > :not(:last-child)) {
+      border-color: #24a3f2d3;
     }
   }
   .divide-gray-100 {
@@ -2235,8 +2206,23 @@
       color: white;
     }
   }
+  .border-\[\#\#24A3F2BF\] {
+    border-color: ##24A3F2BF;
+  }
   .border-\[\#005db5\] {
     border-color: #005db5;
+  }
+  .border-\[\#24A3F2BF\] {
+    border-color: #24A3F2BF;
+  }
+  .border-\[\#24A3F2\] {
+    border-color: #24A3F2;
+  }
+  .border-\[\#24a3f2d3\] {
+    border-color: #24a3f2d3;
+  }
+  .border-\[\#24a3f280\] {
+    border-color: #24a3f280;
   }
   .border-blue-600 {
     border-color: var(--color-blue-600);
@@ -2289,9 +2275,6 @@
       background-color: var(--color-gray-700);
     }
   }
-  .bg-\[\#00\] {
-    background-color: #00;
-  }
   .bg-\[\#005db5\] {
     background-color: #005db5;
   }
@@ -2321,9 +2304,6 @@
   }
   .bg-gray-200 {
     background-color: var(--color-gray-200);
-  }
-  .bg-gray-800 {
-    background-color: var(--color-gray-800);
   }
   .bg-gray-900 {
     background-color: var(--color-gray-900);
@@ -2366,9 +2346,6 @@
   }
   .bg-yellow-400 {
     background-color: var(--color-yellow-400);
-  }
-  .bg-yellow-500 {
-    background-color: var(--color-yellow-500);
   }
   .dark {
     & .selectedCell {
@@ -2456,14 +2433,11 @@
   .p-8 {
     padding: calc(var(--spacing) * 8);
   }
-  .p-10 {
-    padding: calc(var(--spacing) * 10);
-  }
   .p-15 {
     padding: calc(var(--spacing) * 15);
   }
-  .p-20 {
-    padding: calc(var(--spacing) * 20);
+  .p-48 {
+    padding: calc(var(--spacing) * 48);
   }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
@@ -2483,9 +2457,6 @@
   .px-10 {
     padding-inline: calc(var(--spacing) * 10);
   }
-  .px-12 {
-    padding-inline: calc(var(--spacing) * 12);
-  }
   .px-16 {
     padding-inline: calc(var(--spacing) * 16);
   }
@@ -2504,8 +2475,8 @@
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
   }
-  .py-6 {
-    padding-block: calc(var(--spacing) * 6);
+  .py-10 {
+    padding-block: calc(var(--spacing) * 10);
   }
   .py-12 {
     padding-block: calc(var(--spacing) * 12);
@@ -2519,6 +2490,12 @@
   .py-20 {
     padding-block: calc(var(--spacing) * 20);
   }
+  .py-24 {
+    padding-block: calc(var(--spacing) * 24);
+  }
+  .py-32 {
+    padding-block: calc(var(--spacing) * 32);
+  }
   .pt-2 {
     padding-top: calc(var(--spacing) * 2);
   }
@@ -2527,6 +2504,9 @@
   }
   .pt-20 {
     padding-top: calc(var(--spacing) * 20);
+  }
+  .pt-32 {
+    padding-top: calc(var(--spacing) * 32);
   }
   .pt-\[175px\] {
     padding-top: 175px;
@@ -2556,38 +2536,14 @@
       color: white !important;
     }
   }
-  .pr-1 {
-    padding-right: calc(var(--spacing) * 1);
-  }
-  .pr-\[\%\] {
-    padding-right: %;
-  }
-  .pr-\[2\%\] {
-    padding-right: 2%;
-  }
-  .pr-\[20\%\] {
-    padding-right: 20%;
-  }
-  .pr-\[25\%\] {
-    padding-right: 25%;
-  }
-  .pr-\[27\%\] {
-    padding-right: 27%;
-  }
-  .pr-\[28\%\] {
-    padding-right: 28%;
-  }
   .pr-\[30\%\] {
     padding-right: 30%;
-  }
-  .pr-\[70\%\] {
-    padding-right: 70%;
   }
   .pb-4 {
     padding-bottom: calc(var(--spacing) * 4);
   }
-  .pb-5 {
-    padding-bottom: calc(var(--spacing) * 5);
+  .pb-10 {
+    padding-bottom: calc(var(--spacing) * 10);
   }
   .pb-\[125px\] {
     padding-bottom: 125px;
@@ -2626,10 +2582,6 @@
   .text-base {
     font-size: var(--text-base);
     line-height: var(--tw-leading, var(--text-base--line-height));
-  }
-  .text-base\! {
-    font-size: var(--text-base) !important;
-    line-height: var(--tw-leading, var(--text-base--line-height)) !important;
   }
   .text-lg {
     font-size: var(--text-lg);
@@ -2716,6 +2668,10 @@
     --tw-leading: var(--leading-snug);
     line-height: var(--leading-snug);
   }
+  .leading-tight {
+    --tw-leading: var(--leading-tight);
+    line-height: var(--leading-tight);
+  }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
@@ -2783,9 +2739,6 @@
   .text-\[\#005db5\] {
     color: #005db5;
   }
-  .text-\[005bd5\] {
-    color: 005bd5;
-  }
   .text-black {
     color: var(--color-black);
   }
@@ -2827,9 +2780,6 @@
   }
   .text-green-700 {
     color: var(--color-green-700);
-  }
-  .text-green-800 {
-    color: var(--color-green-800);
   }
   .text-red-400 {
     color: var(--color-red-400);
@@ -2919,6 +2869,13 @@
       }
     }
   }
+  .hover\:bg-\[\#02519B\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: #02519B;
+      }
+    }
+  }
   .hover\:bg-\[\#ffffff10\] {
     &:hover {
       @media (hover: hover) {
@@ -2930,6 +2887,13 @@
     &:hover {
       @media (hover: hover) {
         background-color: var(--color-blue-100);
+      }
+    }
+  }
+  .hover\:bg-blue-600 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-blue-600);
       }
     }
   }
@@ -3107,19 +3071,9 @@
       display: block;
     }
   }
-  .sm\:flex {
-    @media (width >= 40rem) {
-      display: flex;
-    }
-  }
   .sm\:h-12 {
     @media (width >= 40rem) {
       height: calc(var(--spacing) * 12);
-    }
-  }
-  .sm\:h-20 {
-    @media (width >= 40rem) {
-      height: calc(var(--spacing) * 20);
     }
   }
   .sm\:w-12 {
@@ -3172,6 +3126,11 @@
       align-items: flex-end;
     }
   }
+  .sm\:items-start {
+    @media (width >= 40rem) {
+      align-items: flex-start;
+    }
+  }
   .sm\:gap-4 {
     @media (width >= 40rem) {
       gap: calc(var(--spacing) * 4);
@@ -3180,6 +3139,21 @@
   .sm\:gap-8 {
     @media (width >= 40rem) {
       gap: calc(var(--spacing) * 8);
+    }
+  }
+  .sm\:gap-10 {
+    @media (width >= 40rem) {
+      gap: calc(var(--spacing) * 10);
+    }
+  }
+  .sm\:gap-10\! {
+    @media (width >= 40rem) {
+      gap: calc(var(--spacing) * 10) !important;
+    }
+  }
+  .sm\:gap-12\! {
+    @media (width >= 40rem) {
+      gap: calc(var(--spacing) * 12) !important;
     }
   }
   .sm\:space-y-0 {
@@ -3215,11 +3189,6 @@
       padding-inline: calc(var(--spacing) * 12);
     }
   }
-  .sm\:py-0 {
-    @media (width >= 40rem) {
-      padding-block: calc(var(--spacing) * 0);
-    }
-  }
   .sm\:py-0\! {
     @media (width >= 40rem) {
       padding-block: calc(var(--spacing) * 0) !important;
@@ -3245,6 +3214,12 @@
     @media (width >= 40rem) {
       font-size: var(--text-4xl) !important;
       line-height: var(--tw-leading, var(--text-4xl--line-height)) !important;
+    }
+  }
+  .sm\:text-5xl\! {
+    @media (width >= 40rem) {
+      font-size: var(--text-5xl) !important;
+      line-height: var(--tw-leading, var(--text-5xl--line-height)) !important;
     }
   }
   .sm\:text-6xl\! {
@@ -3294,6 +3269,21 @@
       inset: calc(var(--spacing) * 0);
     }
   }
+  .md\:col-span-1 {
+    @media (width >= 48rem) {
+      grid-column: span 1 / span 1;
+    }
+  }
+  .md\:col-span-4 {
+    @media (width >= 48rem) {
+      grid-column: span 4 / span 4;
+    }
+  }
+  .md\:col-span-4\! {
+    @media (width >= 48rem) {
+      grid-column: span 4 / span 4 !important;
+    }
+  }
   .md\:mt-0 {
     @media (width >= 48rem) {
       margin-top: calc(var(--spacing) * 0);
@@ -3307,11 +3297,6 @@
   .md\:flex {
     @media (width >= 48rem) {
       display: flex;
-    }
-  }
-  .md\:w-2\/3\! {
-    @media (width >= 48rem) {
-      width: calc(2/3 * 100%) !important;
     }
   }
   .md\:w-32 {
@@ -3359,9 +3344,14 @@
       gap: calc(var(--spacing) * 8);
     }
   }
-  .md\:p-20 {
+  .md\:gap-10 {
     @media (width >= 48rem) {
-      padding: calc(var(--spacing) * 20);
+      gap: calc(var(--spacing) * 10);
+    }
+  }
+  .md\:gap-20 {
+    @media (width >= 48rem) {
+      gap: calc(var(--spacing) * 20);
     }
   }
   .md\:px-0 {
@@ -3369,9 +3359,19 @@
       padding-inline: calc(var(--spacing) * 0);
     }
   }
+  .md\:py-2 {
+    @media (width >= 48rem) {
+      padding-block: calc(var(--spacing) * 2);
+    }
+  }
   .md\:py-20 {
     @media (width >= 48rem) {
       padding-block: calc(var(--spacing) * 20);
+    }
+  }
+  .md\:py-24 {
+    @media (width >= 48rem) {
+      padding-block: calc(var(--spacing) * 24);
     }
   }
   .md\:pt-20\! {
@@ -3731,13 +3731,6 @@
     @media (prefers-color-scheme: dark) {
       &:focus {
         --tw-ring-color: var(--color-gray-600);
-      }
-    }
-  }
-  .dark\:focus\:ring-gray-700 {
-    @media (prefers-color-scheme: dark) {
-      &:focus {
-        --tw-ring-color: var(--color-gray-700);
       }
     }
   }
