--- a/lib/css/output.css
+++ b/lib/css/output.css
@@ -851,9 +851,6 @@
   .inset-0 {
     inset: calc(var(--spacing) * 0);
   }
-  .-top-20 {
-    top: calc(var(--spacing) * -20);
-  }
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
@@ -866,14 +863,14 @@
   .right-5 {
     right: calc(var(--spacing) * 5);
   }
-  .right-8 {
-    right: calc(var(--spacing) * 8);
-  }
   .-bottom-4 {
     bottom: calc(var(--spacing) * -4);
   }
   .-bottom-10 {
     bottom: calc(var(--spacing) * -10);
+  }
+  .-bottom-15 {
+    bottom: calc(var(--spacing) * -15);
   }
   .-bottom-20 {
     bottom: calc(var(--spacing) * -20);
@@ -917,17 +914,14 @@
   .z-\[-1\] {
     z-index: -1;
   }
-  .col-span-4 {
-    grid-column: span 4 / span 4;
-  }
   .col-span-6 {
     grid-column: span 6 / span 6;
   }
   .col-span-12 {
     grid-column: span 12 / span 12;
   }
-  .col-start-3 {
-    grid-column-start: 3;
+  .col-start-1 {
+    grid-column-start: 1;
   }
   .container {
     width: 100%;
@@ -1432,9 +1426,6 @@
   .h-7 {
     height: calc(var(--spacing) * 7);
   }
-  .h-10 {
-    height: calc(var(--spacing) * 10);
-  }
   .h-16 {
     height: calc(var(--spacing) * 16);
   }
@@ -1542,6 +1533,12 @@
   .w-2\/3 {
     width: calc(2/3 * 100%);
   }
+  .w-3 {
+    width: calc(var(--spacing) * 3);
+  }
+  .w-3\/4 {
+    width: calc(3/4 * 100%);
+  }
   .w-3\/5 {
     width: calc(3/5 * 100%);
   }
@@ -1589,6 +1586,9 @@
   }
   .w-\[80\%\] {
     width: 80%;
+  }
+  .w-\[600px\] {
+    width: 600px;
   }
   .w-auto {
     width: auto;
@@ -1670,9 +1670,6 @@
       border-color: var(--color-blue-600);
     }
   }
-  .min-w-\[600px\] {
-    min-width: 600px;
-  }
   .min-w-max {
     min-width: max-content;
   }
@@ -1681,6 +1678,9 @@
   }
   .flex-shrink {
     flex-shrink: 1;
+  }
+  .shrink-0 {
+    flex-shrink: 0;
   }
   .border-collapse {
     border-collapse: collapse;
@@ -1704,18 +1704,6 @@
   .translate-y-full {
     --tw-translate-y: 100%;
     translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .scale-1 {
-    --tw-scale-x: 1%;
-    --tw-scale-y: 1%;
-    --tw-scale-z: 1%;
-    scale: var(--tw-scale-x) var(--tw-scale-y);
-  }
-  .scale-105 {
-    --tw-scale-x: 105%;
-    --tw-scale-y: 105%;
-    --tw-scale-z: 105%;
-    scale: var(--tw-scale-x) var(--tw-scale-y);
   }
   .rotate-180 {
     rotate: 180deg;
@@ -1749,9 +1737,6 @@
   }
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-  .grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
   .grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
@@ -1794,6 +1779,9 @@
   }
   .gap-4 {
     gap: calc(var(--spacing) * 4);
+  }
+  .gap-5 {
+    gap: calc(var(--spacing) * 5);
   }
   .gap-6 {
     gap: calc(var(--spacing) * 6);
@@ -2153,9 +2141,6 @@
   .bg-\[\#FFBC50\] {
     background-color: #FFBC50;
   }
-  .bg-blue-100 {
-    background-color: var(--color-blue-100);
-  }
   .bg-blue-700 {
     background-color: var(--color-blue-700);
   }
@@ -2293,6 +2278,9 @@
   .p-6 {
     padding: calc(var(--spacing) * 6);
   }
+  .p-10 {
+    padding: calc(var(--spacing) * 10);
+  }
   .p-15 {
     padding: calc(var(--spacing) * 15);
   }
@@ -2335,14 +2323,11 @@
   .py-10 {
     padding-block: calc(var(--spacing) * 10);
   }
-  .py-12 {
-    padding-block: calc(var(--spacing) * 12);
-  }
-  .py-16 {
-    padding-block: calc(var(--spacing) * 16);
-  }
   .py-20 {
     padding-block: calc(var(--spacing) * 20);
+  }
+  .py-22 {
+    padding-block: calc(var(--spacing) * 22);
   }
   .py-24 {
     padding-block: calc(var(--spacing) * 24);
@@ -2355,6 +2340,9 @@
   }
   .pt-20 {
     padding-top: calc(var(--spacing) * 20);
+  }
+  .pt-22 {
+    padding-top: calc(var(--spacing) * 22);
   }
   .pt-40 {
     padding-top: calc(var(--spacing) * 40);
@@ -2384,23 +2372,14 @@
       color: white !important;
     }
   }
-  .pr-\[30\%\] {
-    padding-right: 30%;
-  }
   .pb-10 {
     padding-bottom: calc(var(--spacing) * 10);
-  }
-  .pl-3 {
-    padding-left: calc(var(--spacing) * 3);
   }
   .pl-4 {
     padding-left: calc(var(--spacing) * 4);
   }
   .pl-5 {
     padding-left: calc(var(--spacing) * 5);
-  }
-  .pl-20 {
-    padding-left: calc(var(--spacing) * 20);
   }
   .datatable-empty {
     .datatable-wrapper .datatable-table & {
@@ -2579,23 +2558,8 @@
   .text-\[\#005db5\] {
     color: #005db5;
   }
-  .text-\[00\] {
-    color: 00;
-  }
-  .text-\[005\] {
-    color: 005;
-  }
-  .text-\[005db5\] {
-    color: 005db5;
-  }
-  .text-blue-300 {
-    color: var(--color-blue-300);
-  }
   .text-blue-600 {
     color: var(--color-blue-600);
-  }
-  .text-blue-700 {
-    color: var(--color-blue-700);
   }
   .text-gray-200 {
     color: var(--color-gray-200);
@@ -2695,6 +2659,13 @@
         --tw-scale-y: 105%;
         --tw-scale-z: 105%;
         scale: var(--tw-scale-x) var(--tw-scale-y);
+      }
+    }
+  }
+  .hover\:cursor-default {
+    &:hover {
+      @media (hover: hover) {
+        cursor: default;
       }
     }
   }
@@ -2839,9 +2810,34 @@
       outline-style: none;
     }
   }
+  .sm\:col-span-4\! {
+    @media (width >= 40rem) {
+      grid-column: span 4 / span 4 !important;
+    }
+  }
+  .sm\:col-span-6 {
+    @media (width >= 40rem) {
+      grid-column: span 6 / span 6;
+    }
+  }
+  .sm\:col-span-6\! {
+    @media (width >= 40rem) {
+      grid-column: span 6 / span 6 !important;
+    }
+  }
   .sm\:mx-0 {
     @media (width >= 40rem) {
       margin-inline: calc(var(--spacing) * 0);
+    }
+  }
+  .sm\:block {
+    @media (width >= 40rem) {
+      display: block;
+    }
+  }
+  .sm\:w-1\/2 {
+    @media (width >= 40rem) {
+      width: calc(1/2 * 100%);
     }
   }
   .sm\:w-\[30\%\] {
@@ -2857,11 +2853,6 @@
   .sm\:w-full {
     @media (width >= 40rem) {
       width: 100%;
-    }
-  }
-  .sm\:grid-cols-2 {
-    @media (width >= 40rem) {
-      grid-template-columns: repeat(2, minmax(0, 1fr));
     }
   }
   .sm\:grid-cols-12\! {
@@ -2887,11 +2878,6 @@
   .sm\:gap-9\! {
     @media (width >= 40rem) {
       gap: calc(var(--spacing) * 9) !important;
-    }
-  }
-  .sm\:gap-10 {
-    @media (width >= 40rem) {
-      gap: calc(var(--spacing) * 10);
     }
   }
   .sm\:gap-10\! {
@@ -2937,12 +2923,6 @@
       line-height: var(--tw-leading, var(--text-4xl--line-height)) !important;
     }
   }
-  .sm\:text-5xl\! {
-    @media (width >= 40rem) {
-      font-size: var(--text-5xl) !important;
-      line-height: var(--tw-leading, var(--text-5xl--line-height)) !important;
-    }
-  }
   .sm\:text-6xl\! {
     @media (width >= 40rem) {
       font-size: var(--text-6xl) !important;
@@ -2985,14 +2965,34 @@
       line-height: var(--tw-leading, var(--text-xl--line-height)) !important;
     }
   }
+  .md\:absolute\! {
+    @media (width >= 48rem) {
+      position: absolute !important;
+    }
+  }
   .md\:inset-0 {
     @media (width >= 48rem) {
       inset: calc(var(--spacing) * 0);
     }
   }
+  .md\:right-8\! {
+    @media (width >= 48rem) {
+      right: calc(var(--spacing) * 8) !important;
+    }
+  }
+  .md\:bottom-0 {
+    @media (width >= 48rem) {
+      bottom: calc(var(--spacing) * 0);
+    }
+  }
   .md\:col-span-4\! {
     @media (width >= 48rem) {
       grid-column: span 4 / span 4 !important;
+    }
+  }
+  .md\:col-start-3\! {
+    @media (width >= 48rem) {
+      grid-column-start: 3 !important;
     }
   }
   .md\:block {
@@ -3005,9 +3005,19 @@
       display: flex;
     }
   }
+  .md\:w-1\/4\! {
+    @media (width >= 48rem) {
+      width: calc(1/4 * 100%) !important;
+    }
+  }
   .md\:w-\[20\%\] {
     @media (width >= 48rem) {
       width: 20%;
+    }
+  }
+  .md\:w-full {
+    @media (width >= 48rem) {
+      width: 100%;
     }
   }
   .md\:max-w-\[360px\] {
@@ -3020,6 +3030,11 @@
       grid-template-columns: repeat(2, minmax(0, 1fr));
     }
   }
+  .md\:grid-cols-3 {
+    @media (width >= 48rem) {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+  }
   .md\:grid-cols-4 {
     @media (width >= 48rem) {
       grid-template-columns: repeat(4, minmax(0, 1fr));
@@ -3030,9 +3045,35 @@
       flex-direction: row;
     }
   }
+  .md\:flex-row\! {
+    @media (width >= 48rem) {
+      flex-direction: row !important;
+    }
+  }
   .md\:px-0 {
     @media (width >= 48rem) {
       padding-inline: calc(var(--spacing) * 0);
+    }
+  }
+  .md\:pt-25 {
+    @media (width >= 48rem) {
+      padding-top: calc(var(--spacing) * 25);
+    }
+  }
+  .md\:pr-\[30\%\] {
+    @media (width >= 48rem) {
+      padding-right: 30%;
+    }
+  }
+  .md\:text-left {
+    @media (width >= 48rem) {
+      text-align: left;
+    }
+  }
+  .md\:text-2xl\! {
+    @media (width >= 48rem) {
+      font-size: var(--text-2xl) !important;
+      line-height: var(--tw-leading, var(--text-2xl--line-height)) !important;
     }
   }
   .md\:text-lg {
@@ -3049,6 +3090,11 @@
   .lg\:order-2 {
     @media (width >= 64rem) {
       order: 2;
+    }
+  }
+  .lg\:col-span-4\! {
+    @media (width >= 64rem) {
+      grid-column: span 4 / span 4 !important;
     }
   }
   .lg\:mt-0 {
@@ -3132,6 +3178,18 @@
   .lg\:px-8 {
     @media (width >= 64rem) {
       padding-inline: calc(var(--spacing) * 8);
+    }
+  }
+  .lg\:text-3xl\! {
+    @media (width >= 64rem) {
+      font-size: var(--text-3xl) !important;
+      line-height: var(--tw-leading, var(--text-3xl--line-height)) !important;
+    }
+  }
+  .lg\:text-5xl\! {
+    @media (width >= 64rem) {
+      font-size: var(--text-5xl) !important;
+      line-height: var(--tw-leading, var(--text-5xl--line-height)) !important;
     }
   }
   .xl\:max-w-\[580px\] {
@@ -3720,21 +3778,6 @@
   inherits: false;
   initial-value: 0;
 }
-@property --tw-scale-x {
-  syntax: "*";
-  inherits: false;
-  initial-value: 1;
-}
-@property --tw-scale-y {
-  syntax: "*";
-  inherits: false;
-  initial-value: 1;
-}
-@property --tw-scale-z {
-  syntax: "*";
-  inherits: false;
-  initial-value: 1;
-}
 @property --tw-rotate-x {
   syntax: "*";
   inherits: false;
@@ -3891,4 +3934,19 @@
 @property --tw-ease {
   syntax: "*";
   inherits: false;
+}
+@property --tw-scale-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
+}
+@property --tw-scale-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
+}
+@property --tw-scale-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
 }
