--- a/lib/css/output.css
+++ b/lib/css/output.css
@@ -9,7 +9,6 @@
     --color-red-100: oklch(0.936 0.032 17.717);
     --color-red-400: oklch(0.704 0.191 22.216);
     --color-red-700: oklch(0.505 0.213 27.518);
-    --color-amber-400: oklch(0.828 0.189 84.429);
     --color-green-100: oklch(0.962 0.044 156.743);
     --color-green-400: oklch(0.792 0.209 151.711);
     --color-green-700: oklch(0.527 0.154 150.069);
@@ -923,9 +922,6 @@
   .z-\[-1\] {
     z-index: -1;
   }
-  .col-span-4 {
-    grid-column: span 4 / span 4;
-  }
   .col-span-6 {
     grid-column: span 6 / span 6;
   }
@@ -934,9 +930,6 @@
   }
   .col-start-1 {
     grid-column-start: 1;
-  }
-  .col-start-2 {
-    grid-column-start: 2;
   }
   .container {
     width: 100%;
@@ -1450,20 +1443,8 @@
   .h-16 {
     height: calc(var(--spacing) * 16);
   }
-  .h-20 {
-    height: calc(var(--spacing) * 20);
-  }
-  .h-40 {
-    height: calc(var(--spacing) * 40);
-  }
-  .h-80 {
-    height: calc(var(--spacing) * 80);
-  }
   .h-\[34px\] {
     height: 34px;
-  }
-  .h-\[100\%\] {
-    height: 100%;
   }
   .h-\[calc\(100\%-1rem\)\] {
     height: calc(100% - 1rem);
@@ -1471,20 +1452,8 @@
   .h-full {
     height: 100%;
   }
-  .h-max {
-    height: max-content;
-  }
-  .max-h-8 {
-    max-height: calc(var(--spacing) * 8);
-  }
   .max-h-80 {
     max-height: calc(var(--spacing) * 80);
-  }
-  .max-h-96 {
-    max-height: calc(var(--spacing) * 96);
-  }
-  .max-h-\[100\%\] {
-    max-height: 100%;
   }
   .max-h-full {
     max-height: 100%;
@@ -1623,9 +1592,6 @@
   .w-64 {
     width: calc(var(--spacing) * 64);
   }
-  .w-72 {
-    width: calc(var(--spacing) * 72);
-  }
   .w-\[34px\] {
     width: 34px;
   }
@@ -1643,9 +1609,6 @@
   }
   .w-full {
     width: 100%;
-  }
-  .max-w-2\/3 {
-    max-width: calc(2/3 * 100%);
   }
   .max-w-2xl {
     max-width: var(--container-2xl);
@@ -2208,9 +2171,6 @@
   .bg-\[\#FFBC50\] {
     background-color: #FFBC50;
   }
-  .bg-amber-400 {
-    background-color: var(--color-amber-400);
-  }
   .bg-blue-700 {
     background-color: var(--color-blue-700);
   }
@@ -2350,9 +2310,6 @@
   }
   .p-10 {
     padding: calc(var(--spacing) * 10);
-  }
-  .p-15 {
-    padding: calc(var(--spacing) * 15);
   }
   .px-0 {
     padding-inline: calc(var(--spacing) * 0);
@@ -2793,6 +2750,20 @@
       }
     }
   }
+  .hover\:bg-gray-500 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-gray-500);
+      }
+    }
+  }
+  .hover\:bg-gray-500\! {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-gray-500) !important;
+      }
+    }
+  }
   .hover\:bg-gray-700 {
     &:hover {
       @media (hover: hover) {
@@ -2910,11 +2881,6 @@
       display: block;
     }
   }
-  .sm\:max-h-max {
-    @media (width >= 40rem) {
-      max-height: max-content;
-    }
-  }
   .sm\:w-1\/2 {
     @media (width >= 40rem) {
       width: calc(1/2 * 100%);
@@ -2971,11 +2937,6 @@
   .sm\:gap-8\! {
     @media (width >= 40rem) {
       gap: calc(var(--spacing) * 8) !important;
-    }
-  }
-  .sm\:gap-9\! {
-    @media (width >= 40rem) {
-      gap: calc(var(--spacing) * 9) !important;
     }
   }
   .sm\:gap-10\! {
@@ -3129,19 +3090,9 @@
       display: none;
     }
   }
-  .md\:h-max {
-    @media (width >= 48rem) {
-      height: max-content;
-    }
-  }
   .md\:max-h-max {
     @media (width >= 48rem) {
       max-height: max-content;
-    }
-  }
-  .md\:max-h-max\! {
-    @media (width >= 48rem) {
-      max-height: max-content !important;
     }
   }
   .md\:w-1\/4\! {
@@ -3296,18 +3247,6 @@
       grid-column: span 6 / span 6;
     }
   }
-  .lg\:lg\:col-span-6 {
-    @media (width >= 64rem) {
-      @media (width >= 64rem) {
-        grid-column: span 6 / span 6;
-      }
-    }
-  }
-  .lg\:col-start-3 {
-    @media (width >= 64rem) {
-      grid-column-start: 3;
-    }
-  }
   .lg\:col-start-4 {
     @media (width >= 64rem) {
       grid-column-start: 4;
@@ -3346,11 +3285,6 @@
   .lg\:max-w-\[480px\] {
     @media (width >= 64rem) {
       max-width: 480px;
-    }
-  }
-  .lg\:grid-cols-2 {
-    @media (width >= 64rem) {
-      grid-template-columns: repeat(2, minmax(0, 1fr));
     }
   }
   .lg\:grid-cols-3 {
@@ -3421,16 +3355,6 @@
   .xl\:max-w-\[580px\] {
     @media (width >= 80rem) {
       max-width: 580px;
-    }
-  }
-  .xl\:grid-cols-3 {
-    @media (width >= 80rem) {
-      grid-template-columns: repeat(3, minmax(0, 1fr));
-    }
-  }
-  .xl\:grid-cols-3\! {
-    @media (width >= 80rem) {
-      grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
     }
   }
   .xl\:grid-cols-4 {
