--- a/lib/css/output.css
+++ b/lib/css/output.css
@@ -1033,6 +1033,12 @@
   .m-2 {
     margin: calc(var(--spacing) * 2);
   }
+  .-mx-3 {
+    margin-inline: calc(var(--spacing) * -3);
+  }
+  .-mx-4 {
+    margin-inline: calc(var(--spacing) * -4);
+  }
   .-mx-8 {
     margin-inline: calc(var(--spacing) * -8);
   }
@@ -1382,8 +1388,14 @@
   .-mr-1 {
     margin-right: calc(var(--spacing) * -1);
   }
+  .-mr-6 {
+    margin-right: calc(var(--spacing) * -6);
+  }
   .-mr-8 {
     margin-right: calc(var(--spacing) * -8);
+  }
+  .-mr-12 {
+    margin-right: calc(var(--spacing) * -12);
   }
   .-mr-\[2px\] {
     margin-right: calc(2px * -1);
@@ -1489,8 +1501,14 @@
       border-bottom-color: var(--color-gray-700) !important;
     }
   }
+  .-ml-6 {
+    margin-left: calc(var(--spacing) * -6);
+  }
   .-ml-8 {
     margin-left: calc(var(--spacing) * -8);
+  }
+  .-ml-12 {
+    margin-left: calc(var(--spacing) * -12);
   }
   .-ml-\[2px\] {
     margin-left: calc(2px * -1);
@@ -2698,6 +2716,9 @@
   .px-0 {
     padding-inline: calc(var(--spacing) * 0);
   }
+  .px-1 {
+    padding-inline: calc(var(--spacing) * 1);
+  }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
   }
@@ -2718,6 +2739,9 @@
   }
   .px-10 {
     padding-inline: calc(var(--spacing) * 10);
+  }
+  .px-12 {
+    padding-inline: calc(var(--spacing) * 12);
   }
   .py-1 {
     padding-block: calc(var(--spacing) * 1);
@@ -3703,6 +3727,16 @@
       margin-top: calc(var(--spacing) * 0);
     }
   }
+  .lg\:-mr-12 {
+    @media (width >= 64rem) {
+      margin-right: calc(var(--spacing) * -12);
+    }
+  }
+  .lg\:-ml-12 {
+    @media (width >= 64rem) {
+      margin-left: calc(var(--spacing) * -12);
+    }
+  }
   .lg\:ml-4\! {
     @media (width >= 64rem) {
       margin-left: calc(var(--spacing) * 4) !important;
@@ -3763,6 +3797,11 @@
       flex-direction: row;
     }
   }
+  .lg\:justify-around {
+    @media (width >= 64rem) {
+      justify-content: space-around;
+    }
+  }
   .lg\:space-x-2 {
     @media (width >= 64rem) {
       :where(& > :not(:last-child)) {
@@ -3806,6 +3845,11 @@
   .lg\:px-6 {
     @media (width >= 64rem) {
       padding-inline: calc(var(--spacing) * 6);
+    }
+  }
+  .lg\:px-12 {
+    @media (width >= 64rem) {
+      padding-inline: calc(var(--spacing) * 12);
     }
   }
   .lg\:text-left {
